--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <h3>Design tips, tricks, and freebies. Delivered weekly.</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed dc e usmod</p>
                     <div class="subscribe">
-                        <input type="email" name="" id="" placeholder="Email Address...">
+                        <input type="email" placeholder="Email Address...">
                         <button>subscribe</button>
                     </div>
                 </div>
@@ -222,10 +222,10 @@
                 <div class="bottom_trial">
                     <div class="send">
                         <div>
-                            <input type="text" name="" id="" placeholder="Name">
+                            <input type="text" placeholder="Name">
                             <input type="email" placeholder="Your Mail">
                         </div>
-                        <textarea name="" id="" placeholder="Type your message"></textarea>
+                        <textarea placeholder="Type your message"></textarea>
                         <button> send message</button>
                     </div>
                     <div class="contact">
